#97 darkmode z-index bug fix

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -444,6 +444,7 @@ nav {
 
   .darkmode-toggle {
     margin-right: 0;
+    z-index: 101;
   }
 
   .nav {
